# futures-trading-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_BACKTEST.md  ROADMAP.md  SECURITY.md  config.py  docker-compose.yml  main.py  notifier.py  paper_dashboard.py  position_state.py  pyproject.toml  requirements.txt  risk_manager.py  run_backtest.py  run_local_paper_strategy.py  run_sim_roundtrip_test.py  scheduler.py  send_signed_webhook.py  test_shioaji_sim.py  trade_store.py
backtest/: config.py  engine.py  indicators.py  requirements.txt  run.py  signals.py
brokers/: __init__.py  base.py  rithmic_broker.py  shioaji_broker.py
config/: settings.yaml
deploy/: trading-bot.service
reports/: TMF_api_3y_fetch_summary_20260423_234011.txt  tmf_api_history_backtest_20260423.json  tmf_api_recent_backtest_20260423_233232.json  tmf_api_walkforward_constrained_20260424.json  tmf_api_walkforward_lite_20260424.json  tmf_api_walkforward_relaxed_20260424.json  tmf_proxy_txf_3y_100k_2contracts_20260423.json  tmf_proxy_txf_3y_optimized_filters_20260423.json  tmf_research_summary_20260424.md  txf_recovered_best_params_20260419.json
tests/: test_broker_base.py  test_data_quality.py  test_engine.py  test_fetcher.py  test_integration.py  test_local_paper_runner.py  test_monte_carlo.py  test_notifier.py  test_optimizer.py  test_pa.py  test_paper_dashboard.py  test_paper_trading.py  test_position_state.py  test_report.py  test_risk_manager.py  test_security_surfaces.py  test_smc.py  test_strategy_filters.py  test_trade_store.py  test_walk_forward.py  (+1 more)
(+16 files in other folders)
